# mjai-review

./: .editorconfig  .gitmodules  README.md  docker-compose.yml
backend/: Makefile  README.md  pyproject.toml  setup.cfg
backend/src/config/: settings.py  urls.py
backend/src/frontend/templates/: index.html
backend/src/mjai/: consts.py  urls.py  validators.py
backend/src/review/: models.py  serializers.py  urls.py  views.py
backend/src/review/migrations/: 0001_initial.py
backend/tests/test_mjai/: test_urls.py  test_validators.py
backend/tests/test_review/: test_serializers.py  test_views.py
docker/backend/: .devcontainer.json  Dockerfile
docker/frontend/: .devcontainer.json  Dockerfile
docker/node/: .devcontainer.json  Dockerfile
docker/python/: .devcontainer.json  Dockerfile
frontend/: .eslintrc.js  README.md  package.json
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue
node/: Dockerfile  README.md  package.json  vue.config.js
node/public/: index.html
node/src/: App.vue  main.ts
node/src/components/: HelloWorld.vue
python/: Makefile  pyproject.toml  setup.cfg
python/src/api/: urls.py
python/src/config/: settings.py  urls.py
python/src/home/: urls.py
python/src/mjai/: apps.py  consts.py  mjlog.py
python/src/mjai/scripts/: mjlog.py
python/src/review/: models.py  serializers.py  services.py  views.py
python/src/review/migrations/: 0001_initial.py  0002_auto_20200312_1832.py
python/src/vue/: apps.py  urls.py  views.py
python/src/vue/templates/vue/: index.html
python/src/vue/views/: pages.py
(+9 files in other folders)
