[tool.poetry]
name = "mjai-review_backend"
version = "0.1.0"
description = "mjai-review バックエンド"
authors = ["新篠ゆう <37145593+yuarasino@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.4"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
flake8-black = "^0.1.1"
flake8-isort = "^2.8.0"
mypy = "^0.770"
django-stubs = "^1.5.0"
djangorestframework-stubs = "^1.1.0"
pytest = "^5.4.1"
pytest-django = "^3.8.0"

[tool.black]
line-length = 99
exclude = '(.venv|migrations|.pytest_cache|.mypy_cache)'

[tool.isort]
line_length = 99
skip = '.venv,migrations,.pytest_cache,.mypy_cache'
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
