[tool.poetry]
name = "backend"
version = "0.1.0"
description = "mjai-review backend"
authors = ["新篠ゆう <37145593+yuarasino@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
